--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1a1d2c">
+  <meta name="msapplication-navbutton-color" content="#1a1d2c">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#1a1d2c">
   <title>Azkar</title>
   <link rel="icon" href="images/icon.png">
   <link rel="stylesheet" href="style.css">
