--- a/pages/evening-azkar.html
+++ b/pages/evening-azkar.html
@@ -9,6 +9,7 @@
   <meta name="msapplication-navbutton-color" content="#1a1d2c">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1a1d2c">
   <title>Evening Azkar</title>
+  <link rel="icon" href="../images/icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 
