--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#1a1d2c">
   <meta name="msapplication-navbutton-color" content="#1a1d2c">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1a1d2c">
-  <title>Azkar</title>
+  <title>Athkar</title>
   <link rel="icon" href="images/icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
