adding site stats

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   </div>
   <!-- end project -->
   <script src="main.js"></script>
+  <script data-host="https://sitestats.cc" data-dnt="false" src="https://sitestats.cc/js/script.js" id="ZwSg9rf6GA" async defer></script>
 </body>
 </html>
